forget password -> is_active = True

--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -198,7 +198,7 @@ SOFTWARE.
         </button>
         <script src={% static "js/clipboard.js"%}></script>
         <p id="footer_text">
-        © NTHU Online Judge 2015, Templates are from Bootstrap Project</p>
+        © NTHU Online Judge 2015, Templates are from Bootswatch Project</p>
         <p id='time'>
         {{ tstr }}
         </p>
