add hint for pass rate

--- a/contest/templates/contest/overview.html
+++ b/contest/templates/contest/overview.html
@@ -6,7 +6,7 @@
     <tr>
       <th>#</th>
       <th>Problem</th>
-      <th>Pass Rate</th>
+      <th>Pass Rate (passed user / total user)</th>
     </tr>
   </thead>
   <tbody>
