--- a/problem/templates/problem/editTab/tag.html
+++ b/problem/templates/problem/editTab/tag.html
@@ -26,7 +26,7 @@
 $(document).ready(function() {
     $("#addTag").submit(function(e) {
         e.preventDefault();
-        var ret = add_new_tag({{pid}});
+        var ret = add_new_tag({{ problem.pk }});
         refreshEventListener();
         return ret;
     });
@@ -38,7 +38,7 @@ function refreshEventListener() {
         var tid = $(this).parents("tr").attr('data-target');
         $.ajax({
             type: 'GET',
-            url: '/problem/'+{{pid}}+'/tag/'+tid+'/delete/',
+            url: '/problem/'+{{ problem.pk }}+'/tag/'+tid+'/delete/',
             success: function(data) {
               row.remove();
             }
