--- a/problem/templates/problem/problem.html
+++ b/problem/templates/problem/problem.html
@@ -80,6 +80,18 @@
       <span class='label label-danger'>EOF</span>
     </div>
   </div>
+  {% if problem.judge_type == "LOCAL_SPECIAL" and problem.has_special_judge_code %}
+    <h3>Special Judge Code</h3>
+    <a href="{% url 'problem:download_special' problem.filename %}">{{ problem.filename }}</a>
+  {% endif %}
+  {% if problem.judge_type == "LOCAL_PARTIAL" and problem.has_partial_judge_code %}
+    <h3>Partial Judge Code</h3>
+    <a href="{% url 'problem:download_partial' problem.filename %}">{{ problem.filename }}</a>
+  {% endif %}
+  {% if problem.judge_type == "LOCAL_PARTIAL" and problem.has_partial_judge_header %}
+    <h3>Partial Judge Header</h3>
+    <a href="{% url 'problem:download_partial' problem.headername %}">{{ problem.headername }}</a>
+  {% endif %}
   <h3>Tags</h3>
   <div id='tags' style='float:left;width:60%'>
     {% if preview %}
