show only contestants' status

--- a/status/templates/status/statusTable.html
+++ b/status/templates/status/statusTable.html
@@ -20,8 +20,7 @@
             title="
               <ol style='margin:15px'>
                 {% for detail in submission.list %}
-                  <li class='row'>
-                    {{ detail.get_verdict_display }} CPU: {{ detail.cpu|floatformat }} ms
+                  <li class='row'>{{ detail.get_verdict_display }} CPU: {{ detail.cpu|floatformat }} ms
                   </li>
                 {% endfor %}
               </ol>"
