--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -60,7 +60,7 @@ $(function() {
         <div class="panel-heading">Profile</div>
         <div class="panel-body">
           <form class="form-horizontal" action="" method="post" style="margin:10px;">
-            {% if user == profile_user %}
+            {% if profile_form %}
               {% csrf_token %}
               {{ profile_form|bootstrap_horizontal:'col-lg-4' }}
               <div class="modal-footer">
