--- a/users/templates/users/codeEditor.html
+++ b/users/templates/users/codeEditor.html
@@ -27,7 +27,7 @@
 </style>
 
 <div class="container">
-  <h2>Submit Code</h2>
+  <h2>Submit Code {% if problem_name %} - {{ problem_name }} {% endif %}</h2>
   <form class="form-horizontal" action="/users/submit/" method="post">
     {% csrf_token %}
     <div class="row">
