--- a/status/templates/status/status.html
+++ b/status/templates/status/status.html
@@ -7,7 +7,7 @@
 {% endblock title_name %}
 {% block import_source %}
 <link rel="stylesheet" href={% static "jquery-ui/themes/dark-hive/jquery-ui.css" %}>
-<script src={% static "jquery-ui/ui/jquery-ui.js" %}></script>
+<script src={% static "jquery-ui/ui/minified/jquery-ui.min.js" %}></script>
 {% endblock import_source %}
 {% block body_block %}
 
