--- a/status/templates/status/statusTable.html
+++ b/status/templates/status/statusTable.html
@@ -29,7 +29,8 @@
           "success" {% else %} "danger" {% endif %}>
           <td>
             {% if submission.grouper|show_detail:user %}
-              <a href={% url "status:view_code" submission.grouper.id %}>
+              <a target="_blank"
+                 href={% url "status:view_code" submission.grouper.id %}>
                 {{ submission.grouper.id }}
               </a>
             {% else %}
