--- a/problem/templates/problem/editTab/info.html
+++ b/problem/templates/problem/editTab/info.html
@@ -15,6 +15,8 @@
 <br>
 <script>
 {% if not user.has_admin_auth %}
-$("#id_owner").parent().parent().hide();
+$(function () {
+  $("#id_owner").parent().parent().hide();
+})
 {% endif %}
 </script>
