--- a/users/templates/users/submit.html
+++ b/users/templates/users/submit.html
@@ -33,7 +33,9 @@
     outline: 1px solid gray;
     color: black !important;
   }
-  .CodeMirror-selected {background:#D3D3C9 !important;}
+  .CodeMirror-selected {
+    background:#D3D3C9 !important;
+  }
 </style>
 <div class="container">
   <h2>Submit Code {% if problem_name %} - {{ problem_name }} {% endif %}</h2>
