--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -10,8 +10,7 @@
 {% endblock import_source %}
 
 {% block body_block %}
-<body onload="getRestTime()">
-  <div class="container">
+  <div class="container" onload="getRestTime()">
     <!--Title-->
     <div class="well">
       <h2>{{ contest.id }} - {{ contest.cname }}
@@ -164,5 +163,4 @@
     {% include "contest/reply.html" %}
     {% endif %}
   </div>
-</body>
 {% endblock body_block %}
