fix: line too long

--- a/group/templates/group/groupList.html
+++ b/group/templates/group/groupList.html
@@ -12,8 +12,12 @@
       <h2>Group List</h2>
     </div>
     <div class="btn-group" data-toggle="buttons-radio" style="float:right">
-      <button id="myGroupButton" type="button" class="btn btn-primary">My Group</button>
-      <button id="allGroupButton" type="button" class="btn btn-primary">All Group</button>
+      <button id="myGroupButton" type="button" class="btn btn-primary">
+        My Group
+      </button>
+      <button id="allGroupButton" type="button" class="btn btn-primary">
+        All Group
+      </button>
       <script>
         $(function(){
           $('#allGroupTable').show();
