--- a/contest/templates/contest/contestArchive.html
+++ b/contest/templates/contest/contestArchive.html
@@ -17,6 +17,18 @@
   <div class="well">
     <h2>Contest Archive</h2>
   </div>
+  <div class="btn-group" role="group">
+    <a href="{% url 'contest:archive' %}?filter=owned">
+      <button type="button" class="btn btn-default">
+        My Contest
+      </button>
+    </a>
+    <a href="{% url 'contest:archive' %}">
+      <button type="button" class="btn btn-default">
+        All Contest
+      </button>
+    </a>
+  </div>
   <!--contests overview-->
   <table class="table table-striped table-hover">
     <thead>
