--- a/contest/templates/contest/contestArchive.html
+++ b/contest/templates/contest/contestArchive.html
@@ -17,6 +17,7 @@
   <div class="well">
     <h2>Contest Archive</h2>
   </div>
+  {% if user.has_subjudge_auth %}
   <div class="btn-group" role="group">
     <a href="{% url 'contest:archive' %}?filter=owned">
       <button type="button" class="btn btn-default">
@@ -29,6 +30,7 @@
       </button>
     </a>
   </div>
+  {% endif %}
   <!--contests overview-->
   <table class="table table-striped table-hover">
     <thead>
