--- a/contest/templates/contest/contestArchive.html
+++ b/contest/templates/contest/contestArchive.html
@@ -17,10 +17,15 @@
   <div class="well">
     <h2>Contest Archive</h2>
   </div>
-  {% if user.has_subjudge_auth %}
-  <div class="btn-group" role="group">
+  {% if user.is_authenticated %}
+  <div class="btn-group" role="group" style="float:right;">
+    {% if user.has_subjudge_auth %}
     <a href="{% url 'contest:archive' %}?filter=owned">
       <button type="button" class="btn btn-default">
+    {% else%}
+    <a href="{% url 'contest:archive' %}?filter=attended">
+      <button type="button" class="btn btn-default">
+    {% endif %}
         My Contest
       </button>
     </a>
