--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -22,9 +22,9 @@
         </button>
       </a>
       {% endif %}
-      {% if contest|is_freezed %}
+      {% if contest|is_frozen %}
       <h4>
-      <span class="label label-danger">Freezed</span>
+      <span class="label label-danger">Frozen</span>
       </h4>
       {% endif %}
       </h2>
