change div class for container

--- a/group/templates/group/groupDetail.html
+++ b/group/templates/group/groupDetail.html
@@ -6,7 +6,7 @@
 {% endblock title_name %}
 {% block body_block %}
 <br>
-<div class="col-lg-offset-1 col-lg-10">
+<div class="container" id="body">
   <div class="row-fluid">
     <a href="{% url 'group:list' %}" class="btn btn-sm btn-default"
        data-toggle="modal" style="float:left;margin-right:5px">
