add rejudge button

--- a/contest/templates/contest/download.html
+++ b/contest/templates/contest/download.html
@@ -20,7 +20,7 @@
     {% csrf_token %}
     <input type="hidden" name="type" value="public_user_password">
     <input type="hidden" name="contest" value="{{ contest.id }}">
-    <button type="sybmit" class="btn btn-success btn-lg btn-block">
+    <button type="submit" class="btn btn-success btn-lg btn-block">
       Download Public Users' Password
     </button>
   </form>
