--- a/group/templates/group/groupDetail.html
+++ b/group/templates/group/groupDetail.html
@@ -21,25 +21,58 @@
             <div class="container-fluid" style="width:40%;float:left">
               <h5>#{{ group_id }}</h5>
               <h3 style="color:gray">Group name</h3>
-              <h2>{{ group_name }}</h2>
+              <h2>{{ group_name }}
+                <a href="{% url 'group:edit' group_id %}">
+                  <button type="button" class="btn btn-warning btn-xs" data-toggle="tooltip"
+                        data-placement="top" title="Edit Contest">
+                    <span class="glyphicon glyphicon-pencil"></span>
+                  </button>
+                </a>
+              </h2>
             </div>
-            <div class="container-fluid" style="width:60%;float:right">
+            <div class="container-fluid" style="width:60%;float:right;margin-top:27px">
               <div style="float:left; margin-right:70px">
-                <h3 style="color:gray;margin-bottom:30px">Owner</h3>
+                <h3 style="color:gray">Owner</h3>
                 <h2 title="{{owner.email}}">{{ owner }}</h2>
               </div>
               <div style="float:left">
-                <h3 style="color:gray;margin-bottom:30px">Coowner</h3>
-                {% for coowner in coowner_list %}
-                  <h2 title="{{coowner.email}}" style="display:inline">
-                    {{ coowner.username }}
-                  </h2>
-                  {%if forloop.last %}
-                    {% else %}
-                    <h3 style="display:inline">,&nbsp</h3>
-                  {% endif %}
-                {% endfor %}
+                <h3 style="color:gray">
+                  Coowner
+                  <a href="" data-toggle="modal" data-target="#coownerList">
+                    <button type="button" class="btn btn-info btn-xs"
+                            data-toggle="tooltip" data-placement="top" 
+                            title="Contest Info">
+                      <span class="glyphicon glyphicon-info-sign"></span>
+                    </button>
+                  </a>
+                </h3>
               </div>
+              <!--Modal for coowner list-->
+              <div class="modal fade" id="coownerList" role="dialog" 
+                   aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-body">
+                      <table class="table table-hover table-striped">
+                        <thead>
+                          <tr>
+                            <th>Name</th>
+                            <th>Email</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          {% for coowner in coowner_list %}
+                            <tr>
+                              <td>{{ coowner.username }}</td>
+                              <td>{{ coowner.email }}</td>
+                            </tr>
+                          {% endfor %}
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+              <div>
             </div>
           </div>
         </div>
