--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -6,27 +6,28 @@
 
 {% block import_source %}
 <link href="{% static 'contest/css/contest.css' %}" rel="stylesheet">
-<script src="{%static 'contest/js/contest.js'%}"></script>
+<script src="{% static 'contest/js/contest.js'%}"></script>
 {% endblock import_source %}
 
 {% block body_block %}
-  <div class="container" onload="getRestTime()">
+<body onload="getRestTime()">
+  <div class="container">
     <!--Title-->
     <div class="well">
       <h2>{{ contest.id }} - {{ contest.cname }}
-      {% if user|can_edit_contest:contest %}
-       <a href="{% url 'contest:edit' contest.id %}">
-        <button type="button" class="btn btn-warning btn-sm" data-toggle="tooltip"
-                data-placement="top" title="Edit Contest">
-          <span class="glyphicon glyphicon-pencil"></span>
-        </button>
-      </a>
-      {% endif %}
-      {% if contest|is_freezed %}
-      <h4>
-      <span class="label label-danger">Freezed</span>
-      </h4>
-      {% endif %}
+        {% if user|can_edit_contest:contest %}
+        <a href="{% url 'contest:edit' contest.id %}">
+          <button type="button" class="btn btn-warning btn-sm" data-toggle="tooltip"
+                  data-placement="top" title="Edit Contest">
+            <span class="glyphicon glyphicon-pencil"></span>
+          </button>
+        </a>
+        {% endif %}
+        {% if contest|is_freezed %}
+        <h4>
+          <span class="label label-danger">Freezed</span>
+        </h4>
+        {% endif %}
       </h2>
     </div>
     <div class="panel panel-info">
@@ -34,7 +35,6 @@
         <h1 class="panel-title" style="text-align:center;">Time</h1>
       </div>
       <div class="panel-body inline">
-        <a id="server_time" hidden>{{ tstr }}</a>
         <table style="width:100%;text-align:center;">
           <tr>
             <td id="start" style="text-align:left;">{{ contest.start_time|date:"Y/m/d H:i:s" }}</td>
@@ -163,4 +163,5 @@
     {% include "contest/reply.html" %}
     {% endif %}
   </div>
+</body>
 {% endblock body_block %}
