add frozen contest hint

--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -25,7 +25,8 @@
         {% endif %}
         {% if contest|is_freezed %}
         <h4>
-          <span class="label label-danger">Freezed</span>
+          <span class="label label-danger">Frozen</span>
+          *Frozen contest will not update scoreboard until the contest end.
         </h4>
         {% endif %}
       </h2>
