--- a/group/templates/group/groupTable.html
+++ b/group/templates/group/groupTable.html
@@ -41,7 +41,33 @@
                 </h3>
               </div>
               <div class="modal-body">
-                <p>{{group.owner.username}}</p>
+                <table class="table table-hover">
+                  <thead>
+                    <tr>
+                      <div>
+                        <th>Name</th>
+                        <th>Email</th>
+                        <th>Level</th>
+                      </div>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>{{ group.owner.username }}</td>
+                      <td>{{ group.owner.email }}</td>
+                      <td>Owner</td>
+                    </tr>
+                    {% for coowner in group.coowner.all %}
+                    <tr>
+                      <div>
+                        <td>{{ coowner.username }}</td>
+                        <td>{{ coowner.email }}</td>
+                        <td>Coowner</td>
+                      </div>
+                    </tr>
+                    {% endfor %}
+                  </tbody>
+                </table>
               </div>
             </div>
           </div>
