--- a/group/templates/group/groupTable.html
+++ b/group/templates/group/groupTable.html
@@ -22,13 +22,14 @@
     {% for group in group_list %}
     <tr>
       <td>
+        <!--Group Info-->
         <a data-toggle="modal" data-target="#groupInfoModal{{group.id}}">
           <button type="button" class="btn btn-info btn-xs"
            data-toggle="tooltip" data-placement="top" title="Contest Info">
             <span class="glyphicon glyphicon-info-sign"></span>
           </button>
         </a>
-        <!--Modal Section-->
+        <!--Group Info Modal Section-->
         <div class="modal fade" id="groupInfoModal{{group.id}}" tabindex="-1" role="dialog">
           <div class="modal-dialog">
             <div class="modal-content">
