fix contest clarification reply modal

--- a/contest/static/contest/css/contest.css
+++ b/contest/static/contest/css/contest.css
@@ -22,13 +22,6 @@ SOFTWARE.
   color: green;
 }
 
-td.word-block {
+.word-block {
 	word-wrap:break-word;
 }
-
-/*
-div.inline>ul>li {
-  position: absolute;
-  display: inline;
-}*/
-
