--- a/contest/templates/contest/reply.html
+++ b/contest/templates/contest/reply.html
@@ -12,9 +12,9 @@
       <div class="modal-body">
         <form action="{% url 'contest:reply' %}" method="POST" role="form">
           {% csrf_token %} {{ reply_form.replier.as_hidden }} {{ reply_form.clarification.as_hidden }}
-          <div class="form-group" style="width:50%">
+          <div class="form-group">
             <label>Clarification</label>
-            <div id="description"></div>
+            <div id="description" class="word-block"></div>
           </div>
           <div class="form-group">
             <label>Reply</label>
