add contest id and contest name in contest edit page

--- a/contest/templates/contest/editContest.html
+++ b/contest/templates/contest/editContest.html
@@ -34,6 +34,7 @@
       </button>
     </a>
     </h2>
+    <h4>{{ contest }}</h4>
   </div>
   <form action="." method="POST">
     {% csrf_token %}
