fix grammer error in hint

--- a/contest/templates/contest/scoreboard.html
+++ b/contest/templates/contest/scoreboard.html
@@ -2,7 +2,7 @@
 <h3>{{ contest.cname }}</h3>
 {% if contest|is_freezed %}
 <span class="label label-danger">Frozen</span>
-*Frozen contest will not update scoreboard until the contest end.
+*Frozen contest will not update scoreboard until the contest ends.
 {% endif %}
 <h5>Freeze time: {{ contest.freeze_time }} minutes</h5>
 <script src="{% static 'contest/js/scoreboard.js' %}"></script>
