--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -26,7 +26,7 @@
         {% if contest|is_freezed %}
         <h4>
           <span class="label label-danger">Frozen</span>
-          *Frozen contest will not update scoreboard until the contest end.
+          *Frozen contest will not update scoreboard until the contest ends.
         </h4>
         {% endif %}
       </h2>
