--- a/group/templates/group/groupDetail.html
+++ b/group/templates/group/groupDetail.html
@@ -39,7 +39,7 @@
   <div class="col-lg-offset-0 col-lg-12">
     <div class="contest">
       <div style="margin-bottom:15px">
-        <h3 style="text-decoration:underline;color:gray">Traced Contest</h3>
+        <h3 style="color:gray">Traced Contest</h3>
       </div>
       <div class="panel-group" id="accordion">
         <div class="panel panel-success">
@@ -123,7 +123,7 @@
     <hr>
     <div class="announce">
       <div style="margin-bottom:15px">
-        <h3 style="text-decoration:underline;color:gray">Announce</h3>
+        <h3 style="color:gray">Announce</h3>
       </div>
       <table class="table table-hover">
         <thead>
@@ -201,7 +201,7 @@
     <hr>
     <div class="member">
       <div style="margin-bottom:15px">
-        <h3 style="text-decoration:underline;color:gray">Members</h3>
+        <h3 style="color:gray">Members</h3>
       </div>
       <table class="table table-hover">
         <thead>
