--- a/group/templates/group/groupTable.html
+++ b/group/templates/group/groupTable.html
@@ -1,5 +1,5 @@
 {% load group_extras %}
-<table class="table table-hover">
+<table class="table table-hover table-striped">
   <thead>
     <tr>
       {% if user.has_judge_auth %}
