--- a/group/templates/group/groupTable.html
+++ b/group/templates/group/groupTable.html
@@ -23,14 +23,14 @@
     <tr>
       <td>
         <!--Group Info-->
-        <a data-toggle="modal" data-target="#groupInfoModal{{group.id}}">
+        <a data-toggle="modal" data-target="#groupInfoModal{{group.id}}{{info_id}}">
           <button type="button" class="btn btn-info btn-xs"
            data-toggle="tooltip" data-placement="top" title="Contest Info">
             <span class="glyphicon glyphicon-info-sign"></span>
           </button>
         </a>
         <!--Group Info Modal Section-->
-        <div class="modal fade" id="groupInfoModal{{group.id}}" tabindex="-1" role="dialog">
+        <div class="modal fade" id="groupInfoModal{{group.id}}{{info_id}}" tabindex="-1" role="dialog">
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
