--- a/contest/templates/contest/contestInfo.html
+++ b/contest/templates/contest/contestInfo.html
@@ -42,7 +42,7 @@
                   <input type="hidden" name="contest" value="{{ contest.id}}">
                   <input type="hidden" name="problem" value="{{ problem.id }}">
                   <button type="submit" class="btn btn-warning btn-xs"
-                          onclick="return confirm_rejudge()">
+                          onclick="return confirm_rejudge_problem('{{problem.pname}}')">
                     <span class="glyphicon glyphicon-refresh"></span>
                   </button>
                 </form>
@@ -59,7 +59,7 @@
           {% csrf_token %}
           <input type="hidden" name="contest" value="{{ contest.id}}">
           <button type="submit button" class="btn btn-warning btn-block"
-                  onclick="return confirm_rejudge()">
+                  onclick="return confirm_rejudge_contest('{{contest.cname}}')">
             Rejudge All
           </button>
         </form>
