fix line too long

--- a/problem/templates/problem/problem.html
+++ b/problem/templates/problem/problem.html
@@ -111,8 +111,10 @@
         <div class='input-group'>
           {{ tag_form.tag_name }}
           <span class="input-group-btn">
-            <button id='addTagButton' class="btn btn-default" type="button">Add Tag</button>
-        </span>
+	    <button id='addTagButton' class="btn btn-default" type="button">
+	      Add Tag
+	    </button>
+          </span>
         </div>
       </form>
     {% endif %}
