--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -1,7 +1,7 @@
 {% extends "index/base.html" %} {% load staticfiles %} {% load contest_extras %}
 
 {% block title_name %}
-<title>Contest</title>
+<title>{{ contest }}</title>
 {% endblock title_name %}
 
 {% block import_source %}
