--- a/group/templates/group/groupTable.html
+++ b/group/templates/group/groupTable.html
@@ -42,6 +42,7 @@
                 </h3>
               </div>
               <div class="modal-body">
+                <h4>Group Administrators</h4>
                 <table class="table table-hover">
                   <thead>
                     <tr>
